--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Saira+Condensed:wght@300&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/icon.png">
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
 
 </head>
 
@@ -72,12 +72,15 @@
                     <p class="p1">Returns</p>
                     <p class="p2">& Orders</p>
                 </a>
-
             </div>
 
             <div class="cart border">
 
                 <a href="dummy.html"><i class="fa-solid fa-cart-shopping fa-xl"></i>Cart</a>
+            </div>
+
+            <div class="new">
+
             </div>
 
         </nav>
@@ -133,8 +136,6 @@
                     <p>See more</p>
                 </a>
             </div>
-
-
 
             <div class="card">
                 <h2>Health & Personal Care</h2>
