index.html style.css updated

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                     <option value="">Baby</option>
                     <option value="">Books</option>
                     <option value="">Computers</option>
+                    <option value="">Digital music</option>
+                    <option value="">Home</option>
                 </select>
                 <input type="text" placeholder="Search Amazon" class="search-ip">
                 <i class="fa-solid fa-magnifying-glass search-icon" style="color: #0f1111;"></i>
